--- a/style.css
+++ b/style.css
@@ -11,11 +11,16 @@ nav{
 }
 
 .nav-link{
+    font-family: "Noto Sans";
     color: var(--white);
 }
 
 .nav-link:hover{
     color: #dbdbdb;
+}
+
+.dropdown-toggle:hover{
+    color: #dbdbdb !important;
 }
 
 #logo{
@@ -45,22 +50,28 @@ body{
 figcaption{
     color: white;
     text-align: center;
+    font-family: "Noto Sans";
 }
 
 h1{
-color: var(--white);
+    font-family: "Catamaran";
+    color: var(--white);
 }
 
 h2{
-  color: var(--white);
+    font-family: "Catamaran";
+    color: var(--white);
 }
 
 h3{
-  color: var(--white);
-}
+    font-family: "Catamaran";
+    color: var(--white);
+}   
 
 p{
-  color: var(--white);
+    color: white;
+    font-family: "Noto Sans";
+    font-size: 105%;
 }
 
 .pic{
@@ -68,6 +79,7 @@ p{
 }
 
 .link{
+  font-family: "Noto Sans";
   display: block;
   color: var(--blue);
   font-size: 150%;
@@ -81,6 +93,7 @@ p{
       
 #services{
     color: white;
+    font-family: "Noto Sans";
 }
 
 .dropdown-menu{
